# convertext-gui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-release.yml
build_scripts/: __init__.py  build_linux.py  build_macos.py  build_windows.py  common.py
convertext_gui/: __init__.py  gui.py  logging_config.py  threads.py  widgets.py
convertext_gui/assets/: icon.icns
tests/: __init__.py  conftest.py
tests/test_gui/: test_gui_basic.py  test_widgets.py
